了解垃圾收集器的种类以及适用场景